--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 									<ul class="list personal_social">
 										<li><a href="https://www.linkedin.com/in/sumukh-bharadvaja-shivaram/"><i class="fab fa-linkedin"></i></a></li>
 										<li><a href="https://github.com/Sumukh-Bharadvaja"><i class="fab fa-github"></i></a></li>
-										<li><a href="mailto:sbharadv@gmu.edu"></a><i class="far fa-envelope"></i></a></li>
-										
+										<li><a href="mailto:sbharadv@gmu.edu"><i class="far fa-envelope"></i></a></li>
 										
 									</ul>
 								</div>
