--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<div class="container-timeline right-timeline">
 									<div class="content-timeline">
 										<h2>Rubixe</h2>
-										<h3>Data Science Intern</h3>
+										<h3>Data Science Consultant</h3>
 										<ul style="margin-left: -30px;">
 											<li>Addressed an ad campaign for a clothing company with poor Click-Through Rate (CTR) and engagement through extensive predictive analytics. Designed and implemented a reinforcement learning model to dynamically adjust targeting strategies and optimize Call to Actions (CTAs) in real-time. Validated by A/B testing, this approach resulted in a 15% increase in CTR and significant reduction in bounce rates, showcasing effective targeting and enhancing overall campaign effectiveness.</li>
 											<li>Tackled the challenge of enhancing customer transaction prediction with over 400k transactions. Developed an ETL
@@ -210,7 +210,7 @@
 								<div class="container-timeline right-timeline">
 									<div class="content-timeline">
 										<h2>Tata Consultancy Services</h2>
-										<h3>System Engineer</h3>
+										<h3>Engineer Analyst</h3>
 										<ul style="margin-left: -30px;">
 											<li>Strategized a solution for a U.S.-based client's challenge of manually entering data from financial statements by
 												collaborating with a team to produce charts and visualizations for different cash flow statements. This effort resulted in a
