Update : viz_project

--- a/index.html
+++ b/index.html
@@ -401,6 +401,21 @@
         					</div>
         				</div>
         			</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6 viz">
+        				<div class="h_gallery_item">
+        					<div class="redirect">
+        						<img src="img/gallery/viz_2.png"  onclick="window.open('https://github.com/Sumukh-Bharadvaja/Insurance_Data_Anaysis')" alt="">
+        						<a class="lights" > 
+									<img src="img/gallery/icon.png">
+								</a> 
+        					</div>
+        					<div class="g_item_text">
+        						<h4><a href="https://github.com/Sumukh-Bharadvaja/Insurance_Data_Anaysis" target="_blank">Insurance Data Analysis using Power BI</a></h4>
+        						<p>Developed a Power BI dashboard to analyze and visualize insurance policy and claim data, uncovering key trends in gender distribution, claim statuses, and premium contributions across various policy types.</p>
+        					</div>
+        				</div>
+        			</div>
 					<!--================Data Analytics=================-->
 					<div class="col-lg-4 col-md-4 col-sm-6 analytics">
         				<div class="h_gallery_item">
