--- a/index.html
+++ b/index.html
@@ -175,11 +175,13 @@
 										<h2>Rubixe</h2>
 										<h3>Data Science Consultant</h3>
 										<ul style="margin-left: -30px;">
-											<li>Addressed an ad campaign for a clothing company with poor Click-Through Rate (CTR) and engagement through extensive predictive analytics. Designed and implemented a reinforcement learning model to dynamically adjust targeting strategies and optimize Call to Actions (CTAs) in real-time. Validated by A/B testing, this approach resulted in a 15% increase in CTR and significant reduction in bounce rates, showcasing effective targeting and enhancing overall campaign effectiveness.</li>
-											<li>Tackled the challenge of enhancing customer transaction prediction with over 400k transactions. Developed an ETL
-												pipeline and Customer Transaction database using SQL on Databricks and Tableau. Implemented a Gaussian Naive Bayes
-												model with 0.814 AUC, boosting forecasting accuracy with 90% confidence and reducing operational costs by 18%</li>
-											
+											<li> Addressed an ad campaign for a clothing company with poor Click-Through Rate (CTR) and engagement through extensive predictive analytics.</li>
+											<li> Automated daily CTA(Call To Action) tracking with SQL Server and integrated with AWS QuickSight via Amazon S3, enabling live analytics on QuickSight SPICE, enhancing data accuracy by 25% and reducing bounce rates by 15%.</li>
+											<li> Implemented reinforcement learning and predictive analytics to dynamically optimize CTAs based on user behavior, boosting CTR(Click Through Rate) by 15% and reducing operational costs, enhancing overall campaign efficiency by 25%</li>
+											<li> Validated by A/B testing, this approach resulted in a 15% increase in CTR and significant reduction in bounce rates, showcasing effective targeting and enhancing overall campaign effectiveness.</li>
+											<li> Tackled the challenge of enhancing customer transaction prediction with over 400k transactions.</li>
+											<li> Built an ETL pipeline using power Center, Oracle, SQL Server , integrated with Tableau, and automated transaction processing , streamlining operations, improving data flow, and enhancing strategic decision-making by 30%. </li>
+											<li> Implemented a Gaussian Naive Bayes model with 0.814 AUC, with 90% confidence and reducing operational costs by 18% through efficient transaction prediction using advanced analytics.</li>
 										</ul>
 									</div>
 								</div>
@@ -192,14 +194,14 @@
 										<h2>Tata Consultancy Services</h2>
 										<h3>Data Analyst</h3>
 										<ul style="margin-left: -30px;">
+											<li>Developed a Python-based model with our team using NLP for document classification, specifically segregating cash flow statements. Utilized PostgreSQL for database management, streamlining document processing and improving classification accuracy by 18%.</li>
 											<li>Encountered an anomaly in the model due to unwanted texts and watermarks, leading to poor results. Led a team to
 												build a model that identified watermark texts using R-CNN and automated their removal with PyMuPDF and OCR,
 												resulting in a 22% decrease in misclassification error.</li>
-											<li>Handled database inefficiencies by creating a new schema and redesigning the database to eliminate
-												redundancy. This redesign enhanced scalability by 50%, ensuring more efficient data management</li>
+											<li>Redesigned an MS-SQL database and schema to efficiently handle and store extracted data, streamlining anomaly identification and management, resulting in a 50% reduction in data processing time.</li>
 											<li>Worked with a team to develop CI/CD pipelines and establish Operational Excellence guidelines for deploying models on
-												AWS (EC2, Lambda, ECR, SageMaker), reducing time to production by 25%. Also contributed to essential
-												documentation for smooth implementation and scalability.</li>
+												AWS (EC2, Lambda, ECR, SageMaker), reducing time to production by 25%.</li>
+											<li>Prepared and explained the documentation for smooth implementation of model on clients server.</li>
 										</ul>
 									</div>
 								</div>
@@ -215,8 +217,8 @@
 											<li>Strategized a solution for a U.S.-based client's challenge of manually entering data from financial statements by
 												collaborating with a team to produce charts and visualizations for different cash flow statements. This effort resulted in a
 												strategic plan aimed at reduced processing time by 40%</li>
-											<li>Collaborated with cross-functional teams to understand business requirements, developing a timeline and presenting Proof of Concept (POC) summaries to stakeholders.</li>
-											<li>Designed and optimized interactive Tableau dashboards with characteristic graphs, enhancing data visualization and supporting strategic decision-making for the team.</li>
+											<li>Analyzed 10,000+ financial documents using Tableau and MS-SQL integration, improving data accessibility by 30%, and produced POC presentations with accuracy charts to ensure transparent communication of model performance and development timelines to stakeholders.</li>
+											<li>Designed and optimized interactive dashboards using Tableau, incorporating characteristic graphs, which improved data visualization and boosted strategic decision-making efficiency by 30%.</li>
 										</ul>
 									</div>
 								</div>
@@ -293,7 +295,7 @@
 								</a> 
         					</div>
         					<div class="g_item_text">
-        						<h4><a href="https://github.com/Sumukh-Bharadvaja/World-Energy-Consumption" target="_blank">World Enegry Consumption</a></h4>
+        						<h4><a href="https://github.com/Sumukh-Bharadvaja/World-Energy-Consumption" target="_blank">World Energy Consumption</a></h4>
         						<p>Tableau dashboard on World Energy Consumption which provides a comprehensive analysis of energy usage trends across various countries over several decades, highlighting key changes and insights in global energy dynamics.</p>
         					</div>
         				</div>
